--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "next": "13.1.2",
+    "next-auth": "^4.18.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "spotify-web-api-node": "^5.0.2",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/spotify-web-api-node": "^5.0.7"
   }
 }
