--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@types/spotify-web-api-node": "^5.0.7"
+    "@types/spotify-web-api-node": "^5.0.7",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
